fix cut off images

--- a/css/page.css
+++ b/css/page.css
@@ -18,6 +18,7 @@ body {
 .feature-height {
 	min-height: 400px !important;
 	background-repeat: no-repeat;
+	background-size: contain;
 }
 
 .right-feature {
